interface Fight {
     int attack();
}
