public class Goblin extends Personage  {
    public Goblin(String name, int health, int force, int knack, int experience, int gold) {
        super(name, health, force, knack, experience, gold);
    }
}
