public class Player extends Personage {
    public Player(String name, int health, int force, int knack, int experience, int gold) {
        super(name, health, force, knack, experience, gold);
    }

}
