public class Skeleton extends Personage {
    public Skeleton(String name, int health, int force, int knack, int experience, int gold) {
        super(name, health, force, knack, experience, gold);
    }
}
